manifests/02-small-application.yaml
# basic pod, runs for POD_SLEEP_SECS (defaut: 600) seconds then exits
apiVersion: v1
kind: Pod
metadata:
  name: small-application
  namespace: restricted
spec:
  restartPolicy: Always
  containers:
    - name: sleeper
      image: busybox
      imagePullPolicy: Always
      command: [ "/bin/sh", "-c", "echo \"Sleeping for ${POD_SLEEP_SECS}...\" && date && sleep ${POD_SLEEP_SECS} && date && exit 0"]
      resources:
        requests:
          memory: "64Mi"
          cpu: "200m"
        limits:
          memory: "128Mi"
          cpu: "200m"
