manifests/03-app-b.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-b
  namespace: ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b
          image: hashicorp/http-echo:latest
          args:
            - '-text="Service: app-b on $(WHOAMI)"'
            - '-listen=0.0.0.0:8080'
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: ingress
  labels:
    app: app-b
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-b
